--- a/elemep/package.json
+++ b/elemep/package.json
@@ -10,14 +10,27 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "animate.css": "^3.7.2",
+    "axios": "^0.19.0",
+    "less": "^3.10.3",
+    "less-loader": "^5.0.0",
+    "mint-ui": "^2.2.13",
+    "qs": "^6.9.0",
+    "swiper": "^4.5.1",
+    "vant": "^2.2.7",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-awesome-swiper": "^3.1.3",
+    "vue-axios": "^2.1.5",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.1.1",
+    "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-loader": "^7.1.1",
+    "babel-plugin-import": "^1.12.2",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-plugin-transform-vue-jsx": "^3.5.0",
